--- a/task/source-to-image.yaml
+++ b/task/source-to-image.yaml
@@ -9,12 +9,6 @@ spec:
       - name: git-source
         type: git
     params:
-      # - name: pathToContext
-      #   description: The path to the build context, used by Kaniko - within the workspace
-      #   default: ./
-      - name: pathToDockerFile
-        description: The path to the dockerfile to build (relative to the context)
-        default: Dockerfile
       - name: imageUrl
         description: Url of image repository
       - name: imageTag
@@ -27,8 +21,8 @@ spec:
   steps:
   - name: build
     image: quay.io/buildah/stable:v1.11.0
-    workingDir: /workspace/source
-    command: ['buildah', 'bud', '--tls-verify=$(inputs.params.TLSVERIFY)','-t', '$(inputs.params.imageUrl):$(inputs.params.imageTag)','github.com/takzok/ace-cicd-sample-ms1']
+    workingDir: /workspace/git-source
+    command: ['buildah', 'bud', '--tls-verify=$(inputs.params.TLSVERIFY)','-t', '$(inputs.params.imageUrl):$(inputs.params.imageTag)','.']
     volumeMounts:
     - name: varlibcontainers
       mountPath: /var/lib/containers
