--- a/task/deploy-using-oc.yaml
+++ b/task/deploy-using-oc.yaml
@@ -3,18 +3,20 @@ kind: Task
 metadata:
   name: deploy-ms1-using-oc
 spec:
-  inputs:
-    resources:
+  resources:
+    inputs:
       - name: git-source
         type: git
-    params:
-      - name: pathToYamlFile
-        description: The path to the yaml file to deploy within the git source
-      - name: imageUrl
-        description: Url of image repository
-      - name: imageTag
-        description: Tag of the images to be used.
-        default: "latest"
+  params:
+    - name: pathToYamlFile
+      description: The path to the DeploymentConfig yaml file to customize within the git source
+    - name: manifestDir
+      description: The path to the yaml file to deploy within the git source
+    - name: imageUrl
+      description: Url of image repository
+    - name: imageTag
+      description: Tag of the images to be used.
+      default: "latest"
   steps:
   - name: apply-secret
     image: quay.io/openshift/origin-cli:latest
@@ -36,4 +38,4 @@ spec:
     args:
       - "apply"
       - "-f"
-      - "/workspace/git-source/$(inputs.params.pathToYamlFile)"
+      - "/workspace/git-source/$(inputs.params.manifestDir)"
